@@ -1,3 +1,4 @@
+2024-11-03: [FEATURE] Add `ImageDecoration` for widgets
 2024-10-19: [RELEASE] v0.29.0 release - compatible with qtile 0.29.0
 2024-08-23: [FEATURE] Add `GradientDecoration` for widgets
 2024-08-13: [RELEASE] v0.28.1 release - compatible with qtile 0.28.1
